<resources>
    <string name="app_name">spotifyDemo</string>
    <string name="description_artist_image">artist image</string>
    <string name="value_dummy_tv_artist_name">Juan Luis Guerra</string>
    <string name="title_followers">Followers: </string>
    <string name="tv_artist_followers_dummy">2679684</string>
    <string name="text_tv_title_artist_popularity">Popularity:</string>
    <string name="description_album_image">album image</string>
    <string name="value_dummy_tv_album_name">ALBUM name dummy</string>
    <string name="tv_country_name_dummy">AC</string>
    <string name="msg_empty_filter">No results found, please try again</string>
    <string name="msg_error">Error: </string>
    <string name="msg_initial">To see data please search by artist from the top bar.</string>
    <string name="item_menu_search">search</string>
    <string name="item_menu_logout">logout</string>
    <string name="title_btn_go_to_spotify">Go to Spotify</string>
    <string name="msg_token_invalid">Session expired</string>
    <string name="msg_error_token_permission">Error something went wrong, please try again</string>
    <string name="msg_token_ok">Successfully renewed session</string>
    <string name="msg_renew_token">To use the application you need to authorize or renew your session with Spotify</string>
    <string name="title_btn_authorize">Renew</string>
    <string name="title_btn_clear_cache">Clear cache</string>
    <string name="title_login_fragment">Renew Session</string>
    <string name="title_artistic_fragment">Spotify Demo Artistic</string>
    <string name="title_album_fragment">Album Title</string>
    <string name="msg_network_error">At this moment you cannot interact with the application correctly because you do not have internet access, check your connection and try again.</string>
    <string name="title_btn_retry">Retry</string>
    <string name="content_description_close_dialog">close dialog</string>
    <string name="title_network_error_dialog">Network Error</string>
    <string name="message_general_error_dialog">At this moment you cannot interact with the application correctly due to an internal problem, please comment with the developer.</string>
    <string name="title_general_error_dialog">Error</string>
    <string name="title_expand_artist_album_dropdown">Show artist albums</string>
    <string name="title_collapse_artist_album_dropdown">Collapse artist albums</string>
</resources>