<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginVertical="16dp"
            android:padding="4dp"
            android:text="@string/title_network_error_dialog"
            android:textAlignment="center"
            style="@style/title_text" />

        <ImageView
            android:id="@+id/iv_close_dialog"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"

            android:layout_marginHorizontal="4dp"
            android:padding="2dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_baseline_close_24"
            android:contentDescription="@string/content_description_close_dialog" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp">

            <ImageView
                android:id="@+id/iv_icon_dialog"
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_marginHorizontal="76dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_network_check_24" />

            <TextView
                android:id="@+id/tv_message_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="27dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:textAppearance="@style/subtitle_text"
                android:justificationMode="inter_word"
                android:text="@string/msg_network_error"
                android:textAlignment="center" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ok_dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="30dp"
                android:padding="16dp"
                android:text="@string/title_btn_retry"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>